fix: added max-width for content section, to prevent gap.

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,6 @@ body {
   align-items: center;
 }
 
-
 #root section {
   display: flex;
 
@@ -27,13 +26,13 @@ body {
   @media only screen and (min-width: 600px) {
     width: 100vw;
     min-width: 550px;
+    max-width: 1000px;
     width: 50vw;
   }
 }
 
 
 .content_wrapper {
-
   background-color: hsl(0, 0%, 100%);
   @media only screen and (max-width: 600px) {
     width: 90%;
